...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <segue destination="MDP-0C-mzj" kind="show" id="Z8E-oP-98x"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14g-AG-9xB">
                                <rect key="frame" x="20" y="256" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="v6g-Bf-n9q">
                                <rect key="frame" x="20" y="285" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="fBB-2F-HII"/>
...
                                <rect key="frame" x="20" y="544" width="560" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                <state key="normal" title="Create new user"/>
                                <connections>
                                    <segue destination="QeT-UG-jW0" kind="show" id="kcR-Ad-TOH"/>
...
                                <accessibility key="accessibilityConfiguration" label="newEmail"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8Lq-Kr-wke">
...
                                <accessibility key="accessibilityConfiguration" label="DoneButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="Done_button_clicked:" destination="5NY-U5-0e2" eventType="touchUpInside" id="x4u-mr-8i6"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bg-qJ-27Z">
                                <rect key="frame" x="20" y="139" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prq-Zd-z37">
                                <rect key="frame" x="20" y="72" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="606"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desired username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AQY-e0-8XX">
                                                <rect key="frame" x="20" y="8" width="560" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="inf-MK-caC">
                                                <rect key="frame" x="20" y="104" width="560" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="firstName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cUY-sn-RRR">
                                                <rect key="frame" x="20" y="367" width="560" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="repeatPassword"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5Z-HW-17I">
                                                <rect key="frame" x="20" y="209" width="560" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
