...
import UIKit


class NewUserViewController: UIViewController, UITextFieldDelegate, UIGestureRecognizerDelegate {
  
  // MARK: - Members
  let invalidUser = "Enter a valid username."
  let invalidFirstName = "Enter a valid first name."
  let invalidSurName = "Enter a valid surname."
  let invalidEMail = "Enter a valid E-Mail address."
  let invalidPassword = "A password must contain one uppercase letter, one lowercase letter, one digit, one special character and is between 9 and 31 characters long."
  var activeField: UITextField?
  var scrollInset : CGFloat = 0
  var success:Bool = false
  
  // MARK: - Outlets
...
        alert.popoverPresentationController?.sourceRect = CGRectMake(self.view.bounds.size.width / 2.0, self.view.bounds.size.height / 2.0, 1.0, 1.0)
        
        self.presentViewController(alert, animated: true, completion: nil)
      }
      else if ((textField == "PasswordRepeat") && (isError == true))
      {
        let alert = UIAlertController(title: "Alert", message: "Passwords are not the same.", preferredStyle: UIAlertControllerStyle.Alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.Default, handler: nil))
        
        alert.popoverPresentationController?.sourceView = self.view
        alert.popoverPresentationController?.sourceRect = CGRectMake(self.view.bounds.size.width / 2.0, self.view.bounds.size.height / 2.0, 1.0, 1.0)
        
        self.presentViewController(alert, animated: true, completion: nil)
...
